# omnihook

./: .gitignore  index.html  package.json  pnpm-lock.yaml  rsw.toml  tailwind.config.cjs  vite.config.ts
.rsw/: rsw.crates  rsw.info
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/omnihook-rs/: LICENSE_MIT
client/src/: App.tsx  SessionManager.tsx  axiosClient.ts  debug.ts  fonts.ts  index.css  main.tsx
omnihook-rs/: Cargo.toml
omnihook-rs/src/: lib.rs
server/: .env  .gitignore  Cargo.toml
server/sql_queries/: init.sql
server/src/: main.rs  sqlite_store.rs  user.rs
src/: App.css  App.scss  App.tsx  debug.ts  index.css  main.tsx  router.tsx
src/components/: ActionView.tsx  ActionsList.tsx  AsciiArt.tsx  BackgroundView.tsx  BonusTable.tsx  Button.tsx  CoreBonusView.tsx  CreateEncounterForm.tsx  CreateMechForm.tsx  CreatePilotForm.tsx  DesktopBackground.tsx  DesktopIcon.tsx  FormInput.tsx  HLine.tsx  Input.tsx  ManufacturerView.tsx  MechConditionsInput.tsx  MechFrameInput.tsx  MechFrameStatsView.tsx  MechFrameView.tsx  MechResistancesInput.tsx  MechStatusInput.tsx  MultiSelectInput.tsx  NpcClassSkillsView.tsx  NpcClassStatsView.tsx  NpcClassView.tsx  NpcFeatureView.tsx  NpcStatsView.tsx  Pill.tsx  PilotGearView.tsx  SkillView.tsx  StatsTable.tsx  TalentView.tsx  TieredDamageView.tsx  TieredSizeView.tsx  TieredStatView.tsx  TraitView.tsx  UserText.tsx  WeaponStatsTable.tsx  WindowManager.tsx  (+1 more)
src/data/: dev__npcData.ts  lancerData.ts
src/fixtures/: pilotsTestData.ts
src/hooks/: useCollections.ts
src/pages/: ChooseNpc.page.tsx  (+13 more)
(+301 files in other folders)
