[package]
name = "example-sqlite"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.0", features = ["ws", "macros", "http2"] }
axum-server = { version = "0.5.1", features = ["tls-rustls", "tls-openssl"] }
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.171", features = ["serde_derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors"] }

[dependencies.axum-login]
features = ["sqlite"]

[dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]

[dependencies.sqlx]
version = "0.6.1"
default-features = false
features = ["runtime-tokio-rustls", "sqlite"]
